// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dashboard Snapshots DashboardHeader Component should match snapshot in dark mode: header-dark 1`] = `
<div>
  <div
    style="opacity: 0; transform: translateY(-20px);"
  >
    <h1
      font-weight="bold"
    >
      Llama Runner Pro Dashboard
    </h1>
    <span>
      Real-time AI Model Management & Monitoring
    </span>
  </div>
  <div>
    <div
      label="Uptime: 1d 0h 0m"
    >
      Uptime: 1d 0h 0m
    </div>
    <div
      label="CONNECTED"
    >
      CONNECTED
    </div>
    <button>
      <svg
        data-icon="Refresh"
      />
    </button>
    <button>
      <svg
        data-icon="Settings"
      />
    </button>
  </div>
</div>
`;

exports[`Dashboard Snapshots DashboardHeader Component should match snapshot with connected status: header-connected 1`] = `
<div>
  <div
    style="opacity: 0; transform: translateY(-20px);"
  >
    <h1
      font-weight="bold"
    >
      Llama Runner Pro Dashboard
    </h1>
    <span>
      Real-time AI Model Management & Monitoring
    </span>
  </div>
  <div>
    <div
      label="Uptime: 1d 0h 0m"
    >
      Uptime: 1d 0h 0m
    </div>
    <div
      label="CONNECTED"
    >
      CONNECTED
    </div>
    <button>
      <svg
        data-icon="Refresh"
      />
    </button>
    <button>
      <svg
        data-icon="Settings"
      />
    </button>
  </div>
</div>
`;

exports[`Dashboard Snapshots DashboardHeader Component should match snapshot with disconnected status: header-disconnected 1`] = `
<div>
  <div
    style="opacity: 0; transform: translateY(-20px);"
  >
    <h1
      font-weight="bold"
    >
      Llama Runner Pro Dashboard
    </h1>
    <span>
      Real-time AI Model Management & Monitoring
    </span>
  </div>
  <div>
    <div
      label="Uptime: 1d 0h 0m"
    >
      Uptime: 1d 0h 0m
    </div>
    <div
      label="DISCONNECTED"
    >
      DISCONNECTED
    </div>
    <button>
      <svg
        data-icon="Refresh"
      />
    </button>
    <button>
      <svg
        data-icon="Settings"
      />
    </button>
  </div>
</div>
`;

exports[`Dashboard Snapshots DashboardHeader Component should match snapshot without metrics: header-no-metrics 1`] = `
<div>
  <div
    style="opacity: 0; transform: translateY(-20px);"
  >
    <h1
      font-weight="bold"
    >
      Llama Runner Pro Dashboard
    </h1>
    <span>
      Real-time AI Model Management & Monitoring
    </span>
  </div>
  <div>
    <div
      label="CONNECTED"
    >
      CONNECTED
    </div>
    <button>
      <svg
        data-icon="Refresh"
      />
    </button>
    <button>
      <svg
        data-icon="Settings"
      />
    </button>
  </div>
</div>
`;

exports[`Dashboard Snapshots MetricCard Component should match snapshot in dark mode with normal status: metric-card-normal-dark 1`] = `
<div
  class="MuiCard-root"
>
  <div>
    <div>
      <div>
        <span>
          🖥️
        </span>
        <div>
          <span>
            CPU Usage
          </span>
          <h4
            font-weight="bold"
          >
            45%
          </h4>
        </div>
      </div>
    </div>
    <div
      data-testid="linear-progress"
      role="progressbar"
    >
      Loading... 45%
    </div>
    <div>
      <div
        label="Normal"
      >
        Normal
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots MetricCard Component should match snapshot in light mode with normal status: metric-card-normal-light 1`] = `
<div
  class="MuiCard-root"
>
  <div>
    <div>
      <div>
        <span>
          🖥️
        </span>
        <div>
          <span>
            CPU Usage
          </span>
          <h4
            font-weight="bold"
          >
            45%
          </h4>
        </div>
      </div>
    </div>
    <div
      data-testid="linear-progress"
      role="progressbar"
    >
      Loading... 45%
    </div>
    <div>
      <div
        label="Normal"
      >
        Normal
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots MetricCard Component should match snapshot with critical status: metric-card-critical 1`] = `
<div
  class="MuiCard-root"
>
  <div>
    <div>
      <div>
        <span>
          💿
        </span>
        <div>
          <span>
            Disk Usage
          </span>
          <h4
            font-weight="bold"
          >
            95%
          </h4>
        </div>
      </div>
    </div>
    <div
      data-testid="linear-progress"
      role="progressbar"
    >
      Loading... 95%
    </div>
    <div>
      <div
        label="High"
      >
        High
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots MetricCard Component should match snapshot with negative trend: metric-card-negative-trend 1`] = `
<div
  class="MuiCard-root"
>
  <div>
    <div>
      <div>
        <span>
          📊
        </span>
        <div>
          <span>
            Requests
          </span>
          <h4
            font-weight="bold"
          >
            120%
          </h4>
        </div>
      </div>
      <div
        label="-5%"
      >
        -5%
      </div>
    </div>
    <div
      data-testid="linear-progress"
      role="progressbar"
    >
      Loading... 100%
    </div>
    <div>
      <div
        label="High"
      >
        High
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots MetricCard Component should match snapshot with trend: metric-card-with-trend 1`] = `
<div
  class="MuiCard-root"
>
  <div>
    <div>
      <div>
        <span>
          🤖
        </span>
        <div>
          <span>
            Active Models
          </span>
          <h4
            font-weight="bold"
          >
            3/10
          </h4>
        </div>
      </div>
      <div
        label="+15%"
      >
        +15%
      </div>
    </div>
    <div
      data-testid="linear-progress"
      role="progressbar"
    >
      Loading... 3%
    </div>
    <div>
      <div
        label="Normal"
      >
        Normal
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots MetricCard Component should match snapshot with warning status: metric-card-warning 1`] = `
<div
  class="MuiCard-root"
>
  <div>
    <div>
      <div>
        <span>
          💾
        </span>
        <div>
          <span>
            Memory Usage
          </span>
          <h4
            font-weight="bold"
          >
            70%
          </h4>
        </div>
      </div>
    </div>
    <div
      data-testid="linear-progress"
      role="progressbar"
    >
      Loading... 70%
    </div>
    <div>
      <div
        label="Medium"
      >
        Medium
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots MetricCard Component should match snapshot without icon: metric-card-no-icon 1`] = `
<div
  class="MuiCard-root"
>
  <div>
    <div>
      <div>
        <div>
          <span>
            Custom Metric
          </span>
          <h4
            font-weight="bold"
          >
            50%
          </h4>
        </div>
      </div>
    </div>
    <div
      data-testid="linear-progress"
      role="progressbar"
    >
      Loading... 50%
    </div>
    <div>
      <div
        label="Normal"
      >
        Normal
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots ModelsListCard Component should match snapshot in dark mode: models-list-dark 1`] = `
<div
  class="MuiCard-root"
>
  <div>
    <div>
      <h6
        font-weight="bold"
      >
        Available Models
      </h6>
      <span>
        3
         models
      </span>
    </div>
    <div
      data-testid="grid"
    >
      <div
        data-testid="grid"
      >
        <div>
          <div>
            <div>
              <div
                label="LLAMA"
              >
                LLAMA
              </div>
              <span
                font-weight="bold"
              >
                Llama-2-7B
              </span>
            </div>
            <div
              label="RUNNING"
            >
              RUNNING
            </div>
          </div>
          <div>
            <button>
              Stop
            </button>
          </div>
        </div>
      </div>
      <div
        data-testid="grid"
      >
        <div>
          <div>
            <div>
              <div
                label="LLAMA"
              >
                LLAMA
              </div>
              <span
                font-weight="bold"
              >
                Llama-2-13B
              </span>
            </div>
            <div
              label="STOPPED"
            >
              STOPPED
            </div>
          </div>
          <div>
            <button>
              Start
            </button>
          </div>
        </div>
      </div>
      <div
        data-testid="grid"
      >
        <div>
          <div>
            <div>
              <div
                label="MISTRAL"
              >
                MISTRAL
              </div>
              <span
                font-weight="bold"
              >
                Mistral-7B
              </span>
            </div>
            <div
              label="RUNNING"
            >
              RUNNING
            </div>
          </div>
          <div>
            <button>
              Stop
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots ModelsListCard Component should match snapshot with empty models: models-list-empty 1`] = `
<div
  class="MuiCard-root"
>
  <div>
    <div>
      <h6
        font-weight="bold"
      >
        Available Models
      </h6>
      <span>
        0
         models
      </span>
    </div>
    <div
      data-testid="grid"
    />
  </div>
</div>
`;

exports[`Dashboard Snapshots ModelsListCard Component should match snapshot with models: models-list-with-models 1`] = `
<div
  class="MuiCard-root"
>
  <div>
    <div>
      <h6
        font-weight="bold"
      >
        Available Models
      </h6>
      <span>
        3
         models
      </span>
    </div>
    <div
      data-testid="grid"
    >
      <div
        data-testid="grid"
      >
        <div>
          <div>
            <div>
              <div
                label="LLAMA"
              >
                LLAMA
              </div>
              <span
                font-weight="bold"
              >
                Llama-2-7B
              </span>
            </div>
            <div
              label="RUNNING"
            >
              RUNNING
            </div>
          </div>
          <div>
            <button>
              Stop
            </button>
          </div>
        </div>
      </div>
      <div
        data-testid="grid"
      >
        <div>
          <div>
            <div>
              <div
                label="LLAMA"
              >
                LLAMA
              </div>
              <span
                font-weight="bold"
              >
                Llama-2-13B
              </span>
            </div>
            <div
              label="STOPPED"
            >
              STOPPED
            </div>
          </div>
          <div>
            <button>
              Start
            </button>
          </div>
        </div>
      </div>
      <div
        data-testid="grid"
      >
        <div>
          <div>
            <div>
              <div
                label="MISTRAL"
              >
                MISTRAL
              </div>
              <span
                font-weight="bold"
              >
                Mistral-7B
              </span>
            </div>
            <div
              label="RUNNING"
            >
              RUNNING
            </div>
          </div>
          <div>
            <button>
              Stop
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots ModernDashboard Component should match snapshot in dark mode: dashboard-dark 1`] = `
<div
  data-testid="modern-dashboard"
>
  <div>
    <div
      style="opacity: 0; transform: translateY(-20px);"
    >
      <h1
        font-weight="bold"
      >
        Llama Runner Pro Dashboard
      </h1>
      <span>
        Real-time AI Model Management & Monitoring
      </span>
    </div>
    <div>
      <div
        label="Uptime: 1d 0h 0m"
      >
        Uptime: 1d 0h 0m
      </div>
      <div
        label="CONNECTED"
      >
        CONNECTED
      </div>
      <button>
        Restart
      </button>
      <button>
        Start
      </button>
      <button>
        <svg
          data-icon="Refresh"
        />
      </button>
      <button>
        <svg
          data-icon="Settings"
        />
      </button>
    </div>
  </div>
  <h5
    font-weight="bold"
  >
    Dashboard Overview
  </h5>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🖥️
              </span>
              <div>
                <span>
                  CPU Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💾
              </span>
              <div>
                <span>
                  Memory Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="85"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💿
              </span>
              <div>
                <span>
                  Disk Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="95"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🤖
              </span>
              <div>
                <span>
                  Active Models
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="20"
              threshold="10"
              unit="/10"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🎮
              </span>
              <div>
                <span>
                  GPU Utilization
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🌡️
              </span>
              <div>
                <span>
                  GPU Temperature
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="170"
              threshold="85"
              unit="°C"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💿
              </span>
              <div>
                <span>
                  GPU Memory Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                ⚡
              </span>
              <div>
                <span>
                  GPU Power
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="600"
              threshold="300"
              unit="W"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <h6>
            Performance Metrics
          </h6>
          <span>
            No data available
          </span>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <h6>
            GPU Utilization & Power
          </h6>
          <span>
            No data available
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h6
              font-weight="bold"
            >
              Available Models
            </h6>
            <span>
              3
               models
            </span>
          </div>
          <div
            data-testid="grid"
          >
            <div
              data-testid="grid"
            >
              <div>
                <div>
                  <div>
                    <div
                      label="LLAMA"
                    >
                      LLAMA
                    </div>
                    <span
                      font-weight="bold"
                    >
                      Llama-2-7B
                    </span>
                  </div>
                  <div
                    label="RUNNING"
                  >
                    RUNNING
                  </div>
                </div>
                <div>
                  <button>
                    Stop
                  </button>
                </div>
              </div>
            </div>
            <div
              data-testid="grid"
            >
              <div>
                <div>
                  <div>
                    <div
                      label="LLAMA"
                    >
                      LLAMA
                    </div>
                    <span
                      font-weight="bold"
                    >
                      Llama-2-13B
                    </span>
                  </div>
                  <div
                    label="STOPPED"
                  >
                    STOPPED
                  </div>
                </div>
                <div>
                  <button>
                    Start
                  </button>
                </div>
              </div>
            </div>
            <div
              data-testid="grid"
            >
              <div>
                <div>
                  <div>
                    <div
                      label="MISTRAL"
                    >
                      MISTRAL
                    </div>
                    <span
                      font-weight="bold"
                    >
                      Mistral-7B
                    </span>
                  </div>
                  <div
                    label="RUNNING"
                  >
                    RUNNING
                  </div>
                </div>
                <div>
                  <button>
                    Stop
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots ModernDashboard Component should match snapshot in light mode: dashboard-light 1`] = `
<div
  data-testid="modern-dashboard"
>
  <div>
    <div
      style="opacity: 0; transform: translateY(-20px);"
    >
      <h1
        font-weight="bold"
      >
        Llama Runner Pro Dashboard
      </h1>
      <span>
        Real-time AI Model Management & Monitoring
      </span>
    </div>
    <div>
      <div
        label="Uptime: 1d 0h 0m"
      >
        Uptime: 1d 0h 0m
      </div>
      <div
        label="CONNECTED"
      >
        CONNECTED
      </div>
      <button>
        Restart
      </button>
      <button>
        Start
      </button>
      <button>
        <svg
          data-icon="Refresh"
        />
      </button>
      <button>
        <svg
          data-icon="Settings"
        />
      </button>
    </div>
  </div>
  <h5
    font-weight="bold"
  >
    Dashboard Overview
  </h5>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🖥️
              </span>
              <div>
                <span>
                  CPU Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💾
              </span>
              <div>
                <span>
                  Memory Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="85"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💿
              </span>
              <div>
                <span>
                  Disk Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="95"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🤖
              </span>
              <div>
                <span>
                  Active Models
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="20"
              threshold="10"
              unit="/10"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🎮
              </span>
              <div>
                <span>
                  GPU Utilization
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🌡️
              </span>
              <div>
                <span>
                  GPU Temperature
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="170"
              threshold="85"
              unit="°C"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💿
              </span>
              <div>
                <span>
                  GPU Memory Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                ⚡
              </span>
              <div>
                <span>
                  GPU Power
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="600"
              threshold="300"
              unit="W"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div>
        <div
          data-testid="circular-progress"
        />
        <span>
          Loading chart...
        </span>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        data-testid="circular-progress"
      />
    </div>
  </div>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        data-testid="circular-progress"
      />
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots ModernDashboard Component should match snapshot with loading state: dashboard-loading 1`] = `
<div>
  <div>
    <h5
      font-weight="bold"
    >
      Dashboard Overview
    </h5>
    <div
      data-testid="linear-progress"
      role="progressbar"
    >
      Loading... undefined%
    </div>
  </div>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h3>
              🖥️
            </h3>
            <div
              data-testid="skeleton"
            />
          </div>
          <div
            data-testid="skeleton"
          />
          <div
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h3>
              💾
            </h3>
            <div
              data-testid="skeleton"
            />
          </div>
          <div
            data-testid="skeleton"
          />
          <div
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h3>
              💿
            </h3>
            <div
              data-testid="skeleton"
            />
          </div>
          <div
            data-testid="skeleton"
          />
          <div
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h3>
              🤖
            </h3>
            <div
              data-testid="skeleton"
            />
          </div>
          <div
            data-testid="skeleton"
          />
          <div
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h3>
              🎮
            </h3>
            <div
              data-testid="skeleton"
            />
          </div>
          <div
            data-testid="skeleton"
          />
          <div
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h3>
              🌡️
            </h3>
            <div
              data-testid="skeleton"
            />
          </div>
          <div
            data-testid="skeleton"
          />
          <div
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h3>
              💿
            </h3>
            <div
              data-testid="skeleton"
            />
          </div>
          <div
            data-testid="skeleton"
          />
          <div
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h3>
              ⚡
            </h3>
            <div
              data-testid="skeleton"
            />
          </div>
          <div
            data-testid="skeleton"
          />
          <div
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots ModernDashboard Component should match snapshot with no metrics: dashboard-no-metrics 1`] = `
<div>
  <div>
    <h5
      font-weight="bold"
    >
      Dashboard Overview
    </h5>
    <div
      data-testid="linear-progress"
      role="progressbar"
    >
      Loading... undefined%
    </div>
  </div>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h3>
              🖥️
            </h3>
            <div
              data-testid="skeleton"
            />
          </div>
          <div
            data-testid="skeleton"
          />
          <div
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h3>
              💾
            </h3>
            <div
              data-testid="skeleton"
            />
          </div>
          <div
            data-testid="skeleton"
          />
          <div
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h3>
              💿
            </h3>
            <div
              data-testid="skeleton"
            />
          </div>
          <div
            data-testid="skeleton"
          />
          <div
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h3>
              🤖
            </h3>
            <div
              data-testid="skeleton"
            />
          </div>
          <div
            data-testid="skeleton"
          />
          <div
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h3>
              🎮
            </h3>
            <div
              data-testid="skeleton"
            />
          </div>
          <div
            data-testid="skeleton"
          />
          <div
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h3>
              🌡️
            </h3>
            <div
              data-testid="skeleton"
            />
          </div>
          <div
            data-testid="skeleton"
          />
          <div
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h3>
              💿
            </h3>
            <div
              data-testid="skeleton"
            />
          </div>
          <div
            data-testid="skeleton"
          />
          <div
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h3>
              ⚡
            </h3>
            <div
              data-testid="skeleton"
            />
          </div>
          <div
            data-testid="skeleton"
          />
          <div
            data-testid="skeleton"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots QuickActionsCard Component should match snapshot in dark mode: quick-actions-dark 1`] = `
<div
  class="MuiCard-root"
>
  <div>
    <h6
      font-weight="bold"
    >
      Server Actions
    </h6>
    <div
      data-testid="grid"
    >
      <div
        data-testid="grid"
      >
        <button>
          Restart Server
        </button>
      </div>
      <div
        data-testid="grid"
      >
        <button>
          Start Server
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots QuickActionsCard Component should match snapshot in light mode: quick-actions-light 1`] = `
<div
  class="MuiCard-root"
>
  <div>
    <h6
      font-weight="bold"
    >
      Server Actions
    </h6>
    <div
      data-testid="grid"
    >
      <div
        data-testid="grid"
      >
        <button>
          Restart Server
        </button>
      </div>
      <div
        data-testid="grid"
      >
        <button>
          Start Server
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots Responsive Layouts should match snapshot at desktop width (1024px): dashboard-desktop 1`] = `
<div
  data-testid="modern-dashboard"
>
  <div>
    <div
      style="opacity: 0; transform: translateY(-20px);"
    >
      <h1
        font-weight="bold"
      >
        Llama Runner Pro Dashboard
      </h1>
      <span>
        Real-time AI Model Management & Monitoring
      </span>
    </div>
    <div>
      <div
        label="Uptime: 1d 0h 0m"
      >
        Uptime: 1d 0h 0m
      </div>
      <div
        label="CONNECTED"
      >
        CONNECTED
      </div>
      <button>
        Restart
      </button>
      <button>
        Start
      </button>
      <button>
        <svg
          data-icon="Refresh"
        />
      </button>
      <button>
        <svg
          data-icon="Settings"
        />
      </button>
    </div>
  </div>
  <h5
    font-weight="bold"
  >
    Dashboard Overview
  </h5>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🖥️
              </span>
              <div>
                <span>
                  CPU Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💾
              </span>
              <div>
                <span>
                  Memory Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="85"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💿
              </span>
              <div>
                <span>
                  Disk Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="95"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🤖
              </span>
              <div>
                <span>
                  Active Models
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="20"
              threshold="10"
              unit="/10"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🎮
              </span>
              <div>
                <span>
                  GPU Utilization
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🌡️
              </span>
              <div>
                <span>
                  GPU Temperature
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="170"
              threshold="85"
              unit="°C"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💿
              </span>
              <div>
                <span>
                  GPU Memory Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                ⚡
              </span>
              <div>
                <span>
                  GPU Power
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="600"
              threshold="300"
              unit="W"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <h6>
            Performance Metrics
          </h6>
          <span>
            No data available
          </span>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <h6>
            GPU Utilization & Power
          </h6>
          <span>
            No data available
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h6
              font-weight="bold"
            >
              Available Models
            </h6>
            <span>
              3
               models
            </span>
          </div>
          <div
            data-testid="grid"
          >
            <div
              data-testid="grid"
            >
              <div>
                <div>
                  <div>
                    <div
                      label="LLAMA"
                    >
                      LLAMA
                    </div>
                    <span
                      font-weight="bold"
                    >
                      Llama-2-7B
                    </span>
                  </div>
                  <div
                    label="RUNNING"
                  >
                    RUNNING
                  </div>
                </div>
                <div>
                  <button>
                    Stop
                  </button>
                </div>
              </div>
            </div>
            <div
              data-testid="grid"
            >
              <div>
                <div>
                  <div>
                    <div
                      label="LLAMA"
                    >
                      LLAMA
                    </div>
                    <span
                      font-weight="bold"
                    >
                      Llama-2-13B
                    </span>
                  </div>
                  <div
                    label="STOPPED"
                  >
                    STOPPED
                  </div>
                </div>
                <div>
                  <button>
                    Start
                  </button>
                </div>
              </div>
            </div>
            <div
              data-testid="grid"
            >
              <div>
                <div>
                  <div>
                    <div
                      label="MISTRAL"
                    >
                      MISTRAL
                    </div>
                    <span
                      font-weight="bold"
                    >
                      Mistral-7B
                    </span>
                  </div>
                  <div
                    label="RUNNING"
                  >
                    RUNNING
                  </div>
                </div>
                <div>
                  <button>
                    Stop
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots Responsive Layouts should match snapshot at large desktop width (1440px): dashboard-large-desktop 1`] = `
<div
  data-testid="modern-dashboard"
>
  <div>
    <div
      style="opacity: 0; transform: translateY(-20px);"
    >
      <h1
        font-weight="bold"
      >
        Llama Runner Pro Dashboard
      </h1>
      <span>
        Real-time AI Model Management & Monitoring
      </span>
    </div>
    <div>
      <div
        label="Uptime: 1d 0h 0m"
      >
        Uptime: 1d 0h 0m
      </div>
      <div
        label="CONNECTED"
      >
        CONNECTED
      </div>
      <button>
        Restart
      </button>
      <button>
        Start
      </button>
      <button>
        <svg
          data-icon="Refresh"
        />
      </button>
      <button>
        <svg
          data-icon="Settings"
        />
      </button>
    </div>
  </div>
  <h5
    font-weight="bold"
  >
    Dashboard Overview
  </h5>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🖥️
              </span>
              <div>
                <span>
                  CPU Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💾
              </span>
              <div>
                <span>
                  Memory Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="85"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💿
              </span>
              <div>
                <span>
                  Disk Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="95"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🤖
              </span>
              <div>
                <span>
                  Active Models
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="20"
              threshold="10"
              unit="/10"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🎮
              </span>
              <div>
                <span>
                  GPU Utilization
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🌡️
              </span>
              <div>
                <span>
                  GPU Temperature
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="170"
              threshold="85"
              unit="°C"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💿
              </span>
              <div>
                <span>
                  GPU Memory Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                ⚡
              </span>
              <div>
                <span>
                  GPU Power
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="600"
              threshold="300"
              unit="W"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <h6>
            Performance Metrics
          </h6>
          <span>
            No data available
          </span>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <h6>
            GPU Utilization & Power
          </h6>
          <span>
            No data available
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h6
              font-weight="bold"
            >
              Available Models
            </h6>
            <span>
              3
               models
            </span>
          </div>
          <div
            data-testid="grid"
          >
            <div
              data-testid="grid"
            >
              <div>
                <div>
                  <div>
                    <div
                      label="LLAMA"
                    >
                      LLAMA
                    </div>
                    <span
                      font-weight="bold"
                    >
                      Llama-2-7B
                    </span>
                  </div>
                  <div
                    label="RUNNING"
                  >
                    RUNNING
                  </div>
                </div>
                <div>
                  <button>
                    Stop
                  </button>
                </div>
              </div>
            </div>
            <div
              data-testid="grid"
            >
              <div>
                <div>
                  <div>
                    <div
                      label="LLAMA"
                    >
                      LLAMA
                    </div>
                    <span
                      font-weight="bold"
                    >
                      Llama-2-13B
                    </span>
                  </div>
                  <div
                    label="STOPPED"
                  >
                    STOPPED
                  </div>
                </div>
                <div>
                  <button>
                    Start
                  </button>
                </div>
              </div>
            </div>
            <div
              data-testid="grid"
            >
              <div>
                <div>
                  <div>
                    <div
                      label="MISTRAL"
                    >
                      MISTRAL
                    </div>
                    <span
                      font-weight="bold"
                    >
                      Mistral-7B
                    </span>
                  </div>
                  <div
                    label="RUNNING"
                  >
                    RUNNING
                  </div>
                </div>
                <div>
                  <button>
                    Stop
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots Responsive Layouts should match snapshot at mobile width (375px): dashboard-mobile 1`] = `
<div
  data-testid="modern-dashboard"
>
  <div>
    <div
      style="opacity: 0; transform: translateY(-20px);"
    >
      <h1
        font-weight="bold"
      >
        Llama Runner Pro Dashboard
      </h1>
      <span>
        Real-time AI Model Management & Monitoring
      </span>
    </div>
    <div>
      <div
        label="Uptime: 1d 0h 0m"
      >
        Uptime: 1d 0h 0m
      </div>
      <div
        label="CONNECTED"
      >
        CONNECTED
      </div>
      <button>
        Restart
      </button>
      <button>
        Start
      </button>
      <button>
        <svg
          data-icon="Refresh"
        />
      </button>
      <button>
        <svg
          data-icon="Settings"
        />
      </button>
    </div>
  </div>
  <h5
    font-weight="bold"
  >
    Dashboard Overview
  </h5>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🖥️
              </span>
              <div>
                <span>
                  CPU Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💾
              </span>
              <div>
                <span>
                  Memory Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="85"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💿
              </span>
              <div>
                <span>
                  Disk Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="95"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🤖
              </span>
              <div>
                <span>
                  Active Models
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="20"
              threshold="10"
              unit="/10"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🎮
              </span>
              <div>
                <span>
                  GPU Utilization
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🌡️
              </span>
              <div>
                <span>
                  GPU Temperature
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="170"
              threshold="85"
              unit="°C"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💿
              </span>
              <div>
                <span>
                  GPU Memory Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                ⚡
              </span>
              <div>
                <span>
                  GPU Power
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="600"
              threshold="300"
              unit="W"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <h6>
            Performance Metrics
          </h6>
          <span>
            No data available
          </span>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <h6>
            GPU Utilization & Power
          </h6>
          <span>
            No data available
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h6
              font-weight="bold"
            >
              Available Models
            </h6>
            <span>
              3
               models
            </span>
          </div>
          <div
            data-testid="grid"
          >
            <div
              data-testid="grid"
            >
              <div>
                <div>
                  <div>
                    <div
                      label="LLAMA"
                    >
                      LLAMA
                    </div>
                    <span
                      font-weight="bold"
                    >
                      Llama-2-7B
                    </span>
                  </div>
                  <div
                    label="RUNNING"
                  >
                    RUNNING
                  </div>
                </div>
                <div>
                  <button>
                    Stop
                  </button>
                </div>
              </div>
            </div>
            <div
              data-testid="grid"
            >
              <div>
                <div>
                  <div>
                    <div
                      label="LLAMA"
                    >
                      LLAMA
                    </div>
                    <span
                      font-weight="bold"
                    >
                      Llama-2-13B
                    </span>
                  </div>
                  <div
                    label="STOPPED"
                  >
                    STOPPED
                  </div>
                </div>
                <div>
                  <button>
                    Start
                  </button>
                </div>
              </div>
            </div>
            <div
              data-testid="grid"
            >
              <div>
                <div>
                  <div>
                    <div
                      label="MISTRAL"
                    >
                      MISTRAL
                    </div>
                    <span
                      font-weight="bold"
                    >
                      Mistral-7B
                    </span>
                  </div>
                  <div
                    label="RUNNING"
                  >
                    RUNNING
                  </div>
                </div>
                <div>
                  <button>
                    Stop
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Snapshots Responsive Layouts should match snapshot at tablet width (768px): dashboard-tablet 1`] = `
<div
  data-testid="modern-dashboard"
>
  <div>
    <div
      style="opacity: 0; transform: translateY(-20px);"
    >
      <h1
        font-weight="bold"
      >
        Llama Runner Pro Dashboard
      </h1>
      <span>
        Real-time AI Model Management & Monitoring
      </span>
    </div>
    <div>
      <div
        label="Uptime: 1d 0h 0m"
      >
        Uptime: 1d 0h 0m
      </div>
      <div
        label="CONNECTED"
      >
        CONNECTED
      </div>
      <button>
        Restart
      </button>
      <button>
        Start
      </button>
      <button>
        <svg
          data-icon="Refresh"
        />
      </button>
      <button>
        <svg
          data-icon="Settings"
        />
      </button>
    </div>
  </div>
  <h5
    font-weight="bold"
  >
    Dashboard Overview
  </h5>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🖥️
              </span>
              <div>
                <span>
                  CPU Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💾
              </span>
              <div>
                <span>
                  Memory Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="85"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💿
              </span>
              <div>
                <span>
                  Disk Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="95"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🤖
              </span>
              <div>
                <span>
                  Active Models
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="20"
              threshold="10"
              unit="/10"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🎮
              </span>
              <div>
                <span>
                  GPU Utilization
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                🌡️
              </span>
              <div>
                <span>
                  GPU Temperature
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="170"
              threshold="85"
              unit="°C"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                💿
              </span>
              <div>
                <span>
                  GPU Memory Usage
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="100"
              threshold="90"
              unit="%"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <div>
              <span>
                ⚡
              </span>
              <div>
                <span>
                  GPU Power
                </span>
              </div>
            </div>
          </div>
          <div>
            <div
              data-testid="circular-gauge"
              max="600"
              threshold="300"
              unit="W"
            >
              CircularGauge
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <h6>
            Performance Metrics
          </h6>
          <span>
            No data available
          </span>
        </div>
      </div>
    </div>
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <h6>
            GPU Utilization & Power
          </h6>
          <span>
            No data available
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="grid"
  >
    <div
      data-testid="grid"
    >
      <div
        class="MuiCard-root"
      >
        <div>
          <div>
            <h6
              font-weight="bold"
            >
              Available Models
            </h6>
            <span>
              3
               models
            </span>
          </div>
          <div
            data-testid="grid"
          >
            <div
              data-testid="grid"
            >
              <div>
                <div>
                  <div>
                    <div
                      label="LLAMA"
                    >
                      LLAMA
                    </div>
                    <span
                      font-weight="bold"
                    >
                      Llama-2-7B
                    </span>
                  </div>
                  <div
                    label="RUNNING"
                  >
                    RUNNING
                  </div>
                </div>
                <div>
                  <button>
                    Stop
                  </button>
                </div>
              </div>
            </div>
            <div
              data-testid="grid"
            >
              <div>
                <div>
                  <div>
                    <div
                      label="LLAMA"
                    >
                      LLAMA
                    </div>
                    <span
                      font-weight="bold"
                    >
                      Llama-2-13B
                    </span>
                  </div>
                  <div
                    label="STOPPED"
                  >
                    STOPPED
                  </div>
                </div>
                <div>
                  <button>
                    Start
                  </button>
                </div>
              </div>
            </div>
            <div
              data-testid="grid"
            >
              <div>
                <div>
                  <div>
                    <div
                      label="MISTRAL"
                    >
                      MISTRAL
                    </div>
                    <span
                      font-weight="bold"
                    >
                      Mistral-7B
                    </span>
                  </div>
                  <div
                    label="RUNNING"
                  >
                    RUNNING
                  </div>
                </div>
                <div>
                  <button>
                    Stop
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
